--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
  - pip install -q . --use-mirrors
  - pip install python-swiftclient
 
-script: python setup.py test
+script: python runtests.py
 
 notifications:
  email:
