--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
 language: python
 
-python:
- - "2.7"
+install:
+ - pip install tox
+
+script:
+  - tox
 
 env:
- - DJANGO=1.5
-
-install:
- - pip install -q Django==$DJANGO --use-mirrors
- - pip install -q . --use-mirrors
- - pip install python-swiftclient
-
-script: python runtests.py
+  - TOXENV=py27-django17
 
 notifications:
  email:
