Run flake8 in tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-django17
+envlist = py27-django17,flake8
 
 [base]
 deps =
@@ -13,3 +13,14 @@ basepython = python2.7
 deps =
     django>=1.7, <1.8
     {[base]deps}
+
+[testenv:flake8]
+basepython=python
+deps =
+    flake8
+commands=
+    flake8 swiftbrowser tests
+
+[flake8]
+ignore = F403
+show-source = True
