Add coverage to tox report

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,13 @@ envlist = py27-django17,flake8
 [base]
 deps =
     mock
+    coverage
 
 [testenv]
-commands = python runtests.py
+commands =
+    coverage erase
+    coverage run runtests.py
+    coverage report --include="swiftbrowser*"
 
 [testenv:py27-django17]
 basepython = python2.7
