Ensure Python 3.5 and Django 2.1 compatibility

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-django17,flake8
+envlist = py35-django21,flake8
 
 [base]
 deps =
@@ -12,10 +12,10 @@ commands =
     coverage run runtests.py
     coverage report --include="swiftbrowser*"
 
-[testenv:py27-django17]
-basepython = python2.7
+[testenv:py35-django21]
+basepython = python3.5
 deps =
-    django>=1.7, <1.8
+    django>=2.1
     {[base]deps}
 
 [testenv:flake8]
